// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Toggle Component > Snapshot Tests > should match snapshot with default props 1`] = `
<DocumentFragment>
  <div
    class="flex flex-col gap-2 w-fit"
  >
    <div
      class="flex gap-2 rounded-full border-[0.5px] bg-[#F3F3F3] relative"
      role="radiogroup"
    >
      <div
        class="transition-all duration-200 absolute top-0 w-1/2 h-full rounded-full bg-white pointer-events-none left-0 shadow-[3px_0px_9px_0px_#00000012]"
      />
      <button
        aria-checked="true"
        class="rounded-full py-2 px-4 cursor-pointer z-10 transition-all duration-200 font-primary font-normal text-sm bg-transparent border-0 focus:outline-none focus-visible:ring-2 focus-visible:ring-primary focus-visible:ring-offset-1 text-black"
        role="radio"
        tabindex="0"
        type="button"
      >
        Option A
      </button>
      <button
        aria-checked="false"
        class="rounded-full py-2 px-4 cursor-pointer z-10 transition-all duration-200 font-primary font-normal text-sm bg-transparent border-0 focus:outline-none focus-visible:ring-2 focus-visible:ring-primary focus-visible:ring-offset-1 text-black/40"
        role="radio"
        tabindex="-1"
        type="button"
      >
        Option B
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Toggle Component > Snapshot Tests > should match snapshot with different items 1`] = `
<DocumentFragment>
  <div
    class="flex flex-col gap-2 w-fit"
  >
    <div
      class="flex gap-2 rounded-full border-[0.5px] bg-[#F3F3F3] relative"
      role="radiogroup"
    >
      <div
        class="transition-all duration-200 absolute top-0 w-1/2 h-full rounded-full bg-white pointer-events-none left-0 shadow-[3px_0px_9px_0px_#00000012]"
      />
      <button
        aria-checked="true"
        class="rounded-full py-2 px-4 cursor-pointer z-10 transition-all duration-200 font-primary font-normal text-sm bg-transparent border-0 focus:outline-none focus-visible:ring-2 focus-visible:ring-primary focus-visible:ring-offset-1 text-black"
        role="radio"
        tabindex="0"
        type="button"
      >
        Public
      </button>
      <button
        aria-checked="false"
        class="rounded-full py-2 px-4 cursor-pointer z-10 transition-all duration-200 font-primary font-normal text-sm bg-transparent border-0 focus:outline-none focus-visible:ring-2 focus-visible:ring-primary focus-visible:ring-offset-1 text-black/40"
        role="radio"
        tabindex="-1"
        type="button"
      >
        Private
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Toggle Component > Snapshot Tests > should match snapshot with label 1`] = `
<DocumentFragment>
  <div
    class="flex flex-col gap-2 w-fit"
  >
    <div>
      Choose option
    </div>
    <div
      aria-label="Choose option"
      class="flex gap-2 rounded-full border-[0.5px] bg-[#F3F3F3] relative"
      role="radiogroup"
    >
      <div
        class="transition-all duration-200 absolute top-0 w-1/2 h-full rounded-full bg-white pointer-events-none left-0 shadow-[3px_0px_9px_0px_#00000012]"
      />
      <button
        aria-checked="true"
        class="rounded-full py-2 px-4 cursor-pointer z-10 transition-all duration-200 font-primary font-normal text-sm bg-transparent border-0 focus:outline-none focus-visible:ring-2 focus-visible:ring-primary focus-visible:ring-offset-1 text-black"
        role="radio"
        tabindex="0"
        type="button"
      >
        Option A
      </button>
      <button
        aria-checked="false"
        class="rounded-full py-2 px-4 cursor-pointer z-10 transition-all duration-200 font-primary font-normal text-sm bg-transparent border-0 focus:outline-none focus-visible:ring-2 focus-visible:ring-primary focus-visible:ring-offset-1 text-black/40"
        role="radio"
        tabindex="-1"
        type="button"
      >
        Option B
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Toggle Component > Snapshot Tests > should match snapshot with second item selected 1`] = `
<DocumentFragment>
  <div
    class="flex flex-col gap-2 w-fit"
  >
    <div
      class="flex gap-2 rounded-full border-[0.5px] bg-[#F3F3F3] relative"
      role="radiogroup"
    >
      <div
        class="transition-all duration-200 absolute top-0 w-1/2 h-full rounded-full bg-white pointer-events-none left-1/2 shadow-[-7px_0px_9px_0px_#00000012]"
      />
      <button
        aria-checked="false"
        class="rounded-full py-2 px-4 cursor-pointer z-10 transition-all duration-200 font-primary font-normal text-sm bg-transparent border-0 focus:outline-none focus-visible:ring-2 focus-visible:ring-primary focus-visible:ring-offset-1 text-black/40"
        role="radio"
        tabindex="-1"
        type="button"
      >
        Option A
      </button>
      <button
        aria-checked="true"
        class="rounded-full py-2 px-4 cursor-pointer z-10 transition-all duration-200 font-primary font-normal text-sm bg-transparent border-0 focus:outline-none focus-visible:ring-2 focus-visible:ring-primary focus-visible:ring-offset-1 text-black"
        role="radio"
        tabindex="0"
        type="button"
      >
        Option B
      </button>
    </div>
  </div>
</DocumentFragment>
`;
